# rgbd2pointcloud

./: CMakeLists.txt  README  rgbd2point.cpp
